# MIDI2.0WorkbenchPortCpp-Qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  QUICK_START.txt  README.md  Start-MidiUmpAnalyzer.bat  TESTS.md  test_parser.cpp
.github/workflows/: ci.yml  release.yml
docs/architecture/: live_midi_backend_plan.md
samples/: all_examples.txt  flex_data.txt  invalid_inputs.txt  midi1_channel_voice.txt  midi2_channel_voice.txt  sysex7.txt  sysex8_mds.txt  ump_stream_endpoint.txt
scripts/: package_release.ps1
src/: MainWindow.cpp  MainWindow.h  UmpParser.cpp  UmpParser.h
src/core/: InputSourceType.h  MidiRawEvent.h
src/midi/: FakeMidiInputBackend.h  IMidiInputBackend.h  Midi1LiveDecoder.cpp  Midi1LiveDecoder.h  MidiInputController.cpp  MidiInputController.h  RtMidiInputBackend.cpp  RtMidiInputBackend.h
tests/: UmpParserTests.cpp  run_tests.ps1
